2010-04-02  Jaroslav Hajek  <highegg@gmail.com>

	* Sparse.cc (Sparse<T>::maybe_delete_elements): Rewrite. Optimize for
	sparse column vectors.

2010-04-01  Jaroslav Hajek  <highegg@gmail.com>

	* mx-inlines.cc: Declare all loops as throw (). Ditto for
	corresponding applier arguments.
	(do_mx_check): New applier.
	(logical_value): Do not throw exceptions.
	* mx-op-defs.h (SNANCHK, MNANCHK): New helper macros.
	(MS_BOOL_OP, SM_BOOL_OP, MM_BOOL_OP, NDS_BOOL_OP, SND_BOOL_OP,
	NDND_BOOL_OP): Use them here.

2010-03-31  Jaroslav Hajek  <highegg@gmail.com>

	* Sparse.cc (Sparse<T>::Sparse (const Array<T>&,
	const Array<octave_idx_type>&, ...), Sparse<T>::Sparse (const Array<T>&,
	const Array<double>&, ...)):
	Remove old constructors.
	* Sparse.h: Ditto.
	* MSparse.h: Ditto.
	* dSparse.h: Ditto.
	* CSparse.h: Ditto.
	* boolSparse.h: Ditto.

2010-03-31  Jaroslav Hajek  <highegg@gmail.com>

	* idx-vector.cc (idx_vector::idx_range_rep::as_array): Fix typo.
	(idx_vector::raw): Use unchecked constructor.
	* Sparse.cc (Sparse<T>::Sparse (const Array<T>&, const idx_vector&,
	const idx_vector&, ...)): New ctor.
	* Sparse.h: Declare it.

2010-03-30  John W. Eaton  <jwe@octave.org>

	* str-vec.cc (string_vector::string_vector (const char * const *)): 
	Create empty string_vector object if arg is NULL.
	Fixes bug #29386.

2010-03-29  Jaroslav Hajek  <highegg@gmail.com>

	* idx-vector.cc (idx_vector::raw): New method.
	* idx-vector.h: Declare it.

2010-03-27  David Bateman  <dbateman@free.fr>

	* oct-openmp.h: New file.
	* Makefile.am (INCS): Add it here.

2010-03-26  Jaroslav Hajek  <highegg@gmail.com>

	* Sparse.cc (Sparse<T>::index (const idx_vector&, const idx_vector&, bool)):
	Specialize for contiguous row range, row permutation, and implement
	general case through double index-transpose.

2010-03-25  John W. Eaton  <jwe@octave.org>

	* eigs-base.cc (EigsComplexNonSymmetricFunc): Avoid warning
	about deprecated Array constructor.

2010-03-25  John W. Eaton  <jwe@octave.org>
